--- a/spotify/static/home.css
+++ b/spotify/static/home.css
@@ -1,16 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+
+
 .image{
     justify-content: center;
+    size: auto;
 }
 .container {
     display: flex;
     flex-wrap: wrap;
-    max-width: 1200 px;
     justify-content: center;
+    max-width: 1200 px;
+    margin-block: 2rem;
+    margin-bottom: 25px;
+    padding-left: 30px;
+    padding-right: 10px;
     gap: 10rem;
-    padding-top: 50px;
-    margin-left: 200px;
-    background-color: rgb(0, 0, 0);
   }
 body{
+    font-family: "Quicksand", sans-serif;
     background-color: #000000;
 }
