--- a/spotify/static/main2.css
+++ b/spotify/static/main2.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+
+
 *,
 *:before,
 *:after{
@@ -103,7 +106,7 @@ position: relative;
     bottom: -80px;
 }
 form{
-    height: 400px;
+    height: auto;
     width: 400px;
     background-color: #000000;
     position: absolute;
@@ -204,4 +207,13 @@ input {
 }
 .form-control-label{
     padding: 5px;
+}
+p{
+    font-family: "Quicksand", sans-serif;
+}
+h2{
+    font-family: "Quicksand", sans-serif;
+}
+.flash{
+    font-family: "Quicksand", sans-serif;
 }
