--- a/spotify/templates/generated.html
+++ b/spotify/templates/generated.html
@@ -1,6 +1,29 @@
-<div>
-    <iframe style="border-radius:12px; width:450px" src="https://open.spotify.com/embed/playlist/{{id}}" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-</div>
-<div>
-    <a href="{{ url_for('generateplaylist') }}">Generate Again</a>
-</div>
+
+<head>
+    <!-- Design by foolishdeveloper.com -->
+      <title>Generated Playlist</title>
+      
+      <link rel="stylesheet" type="text/css" href="../static/main2.css">
+      
+      <!--Styles
+        heet-->
+      
+  </head>
+  <body>
+      <div class="container">
+        <p><h2 style="color: springgreen">ENJOY!!!</h2></p>
+    </div>
+      <div style="margin-top: 30px; width: auto;"class="container">
+        <div>
+            <iframe style="border-radius:12px; height:400px;width:450px" src="https://open.spotify.com/embed/playlist/{{id}}" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+        </div>
+    </div>
+    <div class="container">
+        <p style="width: 400px;font-size: 13px;color: #68d4d4;">*Sometimes the songs wont show in the embedding due to limitations from Spotify. Kindly check your account to get the new playlist</p>
+    </div>
+    <div class="container">
+        <button style="width: 200px; border-radius: 30px;">
+            <a href="{{ url_for('generateplaylist') }}">Generate Again</a>
+        </button>
+    </div>
+  </body>
