--- a/spotify/templates/generated.html
+++ b/spotify/templates/generated.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="container">
-        <p style="width: 400px;font-size: 13px;color: #68d4d4;">*Sometimes the songs wont show in the embedding due to limitations from Spotify. Kindly check your account to get the new playlist</p>
+        <p style="width: 400px;font-size: 13px;color: #68d4d4;">*Sometimes the songs wont show in the embedding due to limitations from Spotify. Try reloading page or check your account to confirm the new playlist</p>
     </div>
     <div class="container">
         <button style="width: 200px; border-radius: 30px;">
