--- a/spotify/static/home.css
+++ b/spotify/static/home.css
@@ -20,3 +20,7 @@ body{
     font-family: "Quicksand", sans-serif;
     background-color: #000000;
 }
+
+.flash{
+    font-family: "Quicksand", sans-serif;
+}
