--- a/spotify/templates/account.html
+++ b/spotify/templates/account.html
@@ -3,7 +3,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Blog Card</title>
+  <!-- <title>CodePen - Blog Card</title> -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="../static/style.css">
   <link rel="stylesheet" href="path/to/pyscript.css" />
