--- a/spotify/templates/add.html
+++ b/spotify/templates/add.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Design by foolishdeveloper.com -->
-    <title>Register</title>
+    <!-- <title>Register</title> -->
     
     <link rel="stylesheet" type="text/css" href="../static/main2.css">
     
