--- a/spotify/templates/getPlaylist.html
+++ b/spotify/templates/getPlaylist.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Design by foolishdeveloper.com -->
-        <title>Register</title>
+        <!-- Designlzy by foolishdeveloper.com -->
+        <title>Get Playlist</title>
         
         <link rel="stylesheet" type="text/css" href="../static/main2.css">
         
