--- a/spotify/templates/spotifyaccount.html
+++ b/spotify/templates/spotifyaccount.html
@@ -3,7 +3,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Blog Card</title>
+  <title>Account</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="../static/home.css">
 
