--- a/spotify/templates/about.html
+++ b/spotify/templates/about.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="../static/home.css">
+    <title>About</title>
 </head>
 <body style="background-color:#000000;">
-    <img class="image" src="../static/logo/playlist generator.svg" alt="Workflow">
+    <div style="margin-top: 0; max-width: 500px;" class="container center">
+        <img class="image" src="../static/logo/playlist generator.svg" alt="Workflow">
+    </div>
+    <div style="color:#1DB954;max-width: 700px;"class="container center">
+        <ul>
+            <p style="margin-bottom: 10px;">Ever Partying with your friends and wondering what songs will make everyone groove? Ever going on a road trip and wondering what music will make everyone enjoy the journey? </p>
+            <p style="margin-bottom: 10px;">Well worry no more! </p>
+            <p style="margin-bottom: 10px;">Introducing the Buddy Playlist Generator. </p>
+            <p style="margin-bottom: 10px;">This Recommendation system will use your playlist and your friend’s playlist and combine them to make the perfect curated playlist consisting of songs that cater to the tastes of both you and your friend.</p>
+        </ul>
+    </div>
+    <div style="color:#1DB954;max-width: 700px;"class="container center">
+        <ol>
+            <li><p style="margin-bottom: 10px;"><h2 style="font-weight:900">Here’s how to get the perfect playlist in 6 simple steps:</h3></p></li>
+
+                <li><p style="color:white; font-size:medium; margin-bottom:10px">Step 1- Please enter your own playlist in space given. Your playlist can be private or public as you have already logged into your Spotify account and we can access your Spotify playlist with the Spotify web API.</p></li>
+                <li><p style="color:white; font-size:medium; margin-bottom:10px">
+                    Step 2- Please enter your friend’s playlist. Your friend’s playlist needs to be public as we cannot access their private playlists. 
+                </p></li>
+                <li><p style="color:white; font-size:medium; margin-bottom:10px">
+                    Step 3- Please enter the name you would give to your new playlist. 
+                </p></li>
+                <li><p style="color:white; font-size:medium; margin-bottom:10px">
+                    Step 4- Please enter the description you would like to give to your new playlist. 
+                </p></li>
+                <li><p style="color:white; font-size:medium; margin-bottom:10px">
+                    Step 5- Please click on generate after filling all the inputs. This will redirect you to your newly generated playlist. 
+                </p></li>
+                <li><p style="color:white; font-size:medium; margin-bottom:10px">
+                    Step 6- Enjoy!
+                </p></li>  
+        </ol>
+    </div>
 </body>
 </html>
