--- a/spotify/templates/getPlaylist.html
+++ b/spotify/templates/getPlaylist.html
@@ -44,6 +44,9 @@
             </button>
         </form>
     </div>
+    <div class="container">
+        <p style="width: 400px;font-size: 10px;color: #68d4d4;">*Sometimes the playlists emebedding won't appear. This is a limitation from Spotify emebddings. Try reloading the page if you want to see the unavailable embeddings</p>
+    </div>
     {% if searchBoolean == 1 %}
         <div class="container">
             {% for tracklink, id, name, artist, a, b in tracks %}
