--- a/spotify/templates/spotifyaccount.html
+++ b/spotify/templates/spotifyaccount.html
@@ -89,6 +89,28 @@
         </div>
       </div>
     </div>
+    <div style="color:#1DB954;max-width: 700px;"class="container center">
+      <ol>
+          <li><p style="margin-bottom: 15px;"><h2 style="font-weight:900">Here’s how to get the perfect playlist in 6 simple steps:</h3></p></li>
+
+              <li><p style="color:white; font-size:medium; margin-bottom:10px">Step 1- Please enter your own playlist in space given. Your playlist can be private or public as you have already logged into your Spotify account and we can access your Spotify playlist with the Spotify web API.</p></li>
+              <li><p style="color:white; font-size:medium; margin-bottom:10px">
+                  Step 2- Please enter your friend’s playlist. Your friend’s playlist needs to be public as we cannot access their private playlists. 
+              </p></li>
+              <li><p style="color:white; font-size:medium; margin-bottom:10px">
+                  Step 3- Please enter the name you would give to your new playlist. 
+              </p></li>
+              <li><p style="color:white; font-size:medium; margin-bottom:10px">
+                  Step 4- Please enter the description you would like to give to your new playlist. 
+              </p></li>
+              <li><p style="color:white; font-size:medium; margin-bottom:10px">
+                  Step 5- Please click on generate after filling all the inputs. This will redirect you to your newly generated playlist. 
+              </p></li>
+              <li><p style="color:white; font-size:medium; margin-bottom:10px">
+                  Step 6- Enjoy!
+              </p></li>  
+      </ol>
+  </div>
   
     <!-- Mobile menu, show/hide based on menu state. -->
     <div class="sm:hidden" id="mobile-menu">
