fixed grammatical errors in about

--- a/spotify/templates/about.html
+++ b/spotify/templates/about.html
@@ -17,7 +17,7 @@
             <p style="margin-bottom: 10px;">Ever Partying with your friends and wondering what songs will make everyone groove? Ever going on a road trip and wondering what music will make everyone enjoy the journey? </p>
             <p style="margin-bottom: 10px;">Well worry no more! </p>
             <p style="margin-bottom: 10px;">Introducing the Buddy Playlist Generator. </p>
-            <p style="margin-bottom: 10px;">This Recommendation system will use your playlist and your friend’s playlist and combine them to make the perfect curated playlist consisting of songs that cater to the tastes of both you and your friend.</p>
+            <p style="margin-bottom: 10px;">This recommendation system will use your playlist and your friend’s playlist and combine them to make the perfect curated playlist consisting of songs that cater to the tastes of both you and your friend.</p>
         </ul>
     </div>
     <div style="color:#1DB954;max-width: 700px;"class="container center">
