extended maximum width of container

--- a/spotify/templates/spotifyaccount.html
+++ b/spotify/templates/spotifyaccount.html
@@ -10,10 +10,10 @@
 
 </head>
 <body>
-<div style="margin-top: 50px; margin-bottom: 30px;"class="container">
+<div style="margin-top: 50px; margin-bottom: 30px;"class="container center">
     <img style="height: 300px; width: 300px;" class="h-8 w-8 rounded-full" src="{{ img }}" alt="">
 </div>
-<div class="container">
+<div class="container center">
 <!-- partial:index.partial.html -->
   <nav class="bg-gray-800" style="background-color :#000000">
     <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
