centered cards in add track

--- a/spotify/static/main2.css
+++ b/spotify/static/main2.css
@@ -217,3 +217,9 @@ h2{
 .flash{
     font-family: "Quicksand", sans-serif;
 }
+.center {
+    margin: auto;
+    width: 90%;
+    padding: 10px;
+    text-align: left;
+  }
