--- a/spotify/templates/addTracks.html
+++ b/spotify/templates/addTracks.html
@@ -49,7 +49,7 @@
         </button>
     </form>
 </div>
-<div class="container">
+<div class="container center">
     {% for tracklink, id, name, artist, a, b in tracks %}
     <div class="card">
       <div class="card__body">
