--- a/spotify/templates/home.html
+++ b/spotify/templates/home.html
@@ -120,8 +120,14 @@
         <ul>
             <p style="margin-bottom: 10px;">Ever Partying with your friends and wondering what songs will make everyone groove? Ever going on a road trip and wondering what music will make everyone enjoy the journey? </p>
             <p style="margin-bottom: 10px;">Well worry no more! </p>
-            <p style="margin-bottom: 10px;">Introducing the Buddy Playlist Generator. </p>
+            <p style="margin-bottom: 10px; font-weight: 900; font-size: 24px;">Introducing the Buddy Playlist Generator. </p>
             <p style="margin-bottom: 10px;">This recommendation system will use your playlist and your friend’s playlist and combine them to make the perfect curated playlist consisting of songs that cater to the tastes of both you and your friend.</p>
+        </ul>
+    </div>
+    <div style="color:#ffffff;max-width: 700px;font-size: 14px;"class="container center">
+        <ul>
+            <p style="margin-bottom: 10px;">**Since, I am yet to get approval to my quota extension from Spotify, kindly mail me if you want to test the application. The app is in development mode right now and only selected beta users can test it.</p>
+            <p style="margin-bottom: 10px;">Mail: <a href="mailto:saumyamundra@gmail.com" target="_blank">saumyamundra@gmail.com</a></p>
         </ul>
     </div>
         <div class="sm:hidden" id="mobile-menu">
