--- a/spotify/templates/spotifyaccount.html
+++ b/spotify/templates/spotifyaccount.html
@@ -111,6 +111,12 @@
               </p></li>  
       </ol>
   </div>
+  <div style="color:#ffffff;max-width: 700px;font-size: 14px;"class="container center">
+    <ul>
+        <p style="margin-bottom: 10px;">**Since, I am yet to get approval to my quota extension from Spotify, kindly mail me if you want to test the application. The app is in development mode right now and only selected beta users can test it.</p>
+        <p style="margin-bottom: 10px;">Mail: <a href="mailto:saumyamundra@gmail.com" target="_blank">saumyamundra@gmail.com</a></p>
+    </ul>
+</div>
   
     <!-- Mobile menu, show/hide based on menu state. -->
     <div class="sm:hidden" id="mobile-menu">
